# models/tag.js
@@ -1,24 +1,0 @@
-var mongoose  = require('mongoose');
-var BaseModel = require("./base_model");
-var Schema    = mongoose.Schema;
-// var utility   = require('utility');
-// var _ = require('lodash');
-
-var TagSchema = new Schema({
-	name: { type: String},
-	company_id: {type: String},
-
-	create_at: { type: Date, default: Date.now },
-	update_at: { type: Date, default: Date.now },
-});
-
-TagSchema.plugin(BaseModel);
-
-
-TagSchema.pre('save', function(next){
-	var now = new Date();
-	this.update_at = now;
-	next();
-});
-
-mongoose.model('Tag', TagSchema);
